--- a/assets/scss/normalise.scss
+++ b/assets/scss/normalise.scss
@@ -8,6 +8,7 @@
 
 body {
     // @extend %screen_max--center;
+    min-height: 100vh;
 }
 
 /* html {
